force-app/main/default/objects/ACME_SupremeCourtDecision__c/fields/CaseNumber__c.field-meta.xml
<CustomField xmlns='http://soap.sforce.com/2006/04/metadata'>
    <fullName>CaseNumber__c</fullName>
    <label>Case Number</label>
    <type>Text</type>
    <length>50</length>
</CustomField>