force-app/main/default/objects/ACME_SupremeCourtDecision__c/fields/DecisionDate__c.field-meta.xml
<CustomField xmlns='http://soap.sforce.com/2006/04/metadata'>
    <fullName>DecisionDate__c</fullName>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>