force-app/main/default/objects/ACME_SupremeCourtDecision__c/fields/FullTextContent__c.field-meta.xml
<CustomField xmlns='http://soap.sforce.com/2006/04/metadata'>
    <fullName>FullTextContent__c</fullName>
    <label>Full Text Content</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>