force-app/main/default/objects/ACME_SupremeCourtDecision__c/fields/StatutesReferenced__c.field-meta.xml
<CustomField xmlns='http://soap.sforce.com/2006/04/metadata'>
    <fullName>StatutesReferenced__c</fullName>
    <label>Statutes Referenced</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Criminal Procedure</fullName>
            </value>
            <value>
                <fullName>Electronic Evidence</fullName>
            </value>
            <value>
                <fullName>Search and Seizure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>